# obc

objetivoc/: CMakeLists.txt  Doxyfile  ObjetivoC.cbp  ObjetivoC.depend  ObjetivoC.layout
objetivoc/doc/: base.css  desarrollo.html  index.html
objetivoc/pruebas/: CMakeLists.txt  Makefile  OCProbable.h  OCPrueba.h  OCPrueba.m  OCPruebaEnteros.h  OCPruebaEnteros.m  PruebaOCCadena.h  PruebaOCCadena.m  PruebaOCTokenizer.m  pruebas.m
objetivoc/src/: CMakeLists.txt  OCCamara.h  OCCamara.m  OCColor.h  OCColor.m  OCEscena.h  OCEscena.m  OCEsfera.m  OCLuz.h  OCObjeto.h  OCObjeto.m  OCParser.h  OCParser.m  OCRayo.h  OCRayo.m  OCVector.h  OCVector.m  obc.m
objetivoc/utiles/: .sconsign.dblite  CMakeLists.txt  Makefile  OCCadena.h  OCCadena.m  OCLista.h  OCLista.m  OCNodo.h  OCNodo.m  OCTokenizer.h  OCTokenizer.m
